@@ -1,5 +1,5 @@
 name             = DBIx-MultiStatementDo
-version          = 0.30000
+version          = 1.00000
 author           = Emanuele Zeppieri <emazep@cpan.org>
 license          = Perl_5
 copyright_holder = Emanuele Zeppieri
@@ -27,6 +27,10 @@ remove = Readme
 [InstallGuide]
 [MetaJSON]
 
+[ReadmeMarkdownFromPod]
+[CopyFilesFromBuild]
+move = README.mkdn
+
 [MinimumPerl]
 [AutoPrereqs]
 [Prereqs / TestRequires]
@@ -37,13 +41,13 @@ Test::More      = 0.7
 [ExtraTests]
 [PodSyntaxTests]
 [PodCoverageTests]
-[SynopsisTests]
 [CompileTests]
 [MetaTests]
 [CriticTests]
 [UnusedVarsTests]
 [KwaliteeTests]
 [NoTabsTests]
+;[SynopsisTests]
 ;[EOLTests]
 ;[ReportVersions]
 ;[HasVersionTests]
